<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layout_marginRight" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/user_viewHeight"
                    android:background="@mipmap/line" />

                <!-- 个人头像 -->
                <RelativeLayout
                    android:id="@+id/tou_rl"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/user_picHeight"
                    android:background="@null"
                    android:clickable="true"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/text_black_18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:drawableLeft="@mipmap/ic_profile_nickname_normal"
                        android:drawablePadding="@dimen/user_signMargin"
                        android:duplicateParentState="true"
                        android:gravity="center_vertical"
                        android:text="@string/user_pic" />

                    <ImageView
                        android:id="@+id/detail_img"
                        android:layout_width="@dimen/user_picHeight"
                        android:layout_height="@dimen/user_picHeight"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@+id/tou_arrow"
                        android:scaleType="fitXY" />

                    <ImageView
                        android:id="@+id/tou_arrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/user_arrowMargin"
                        android:scaleType="matrix"
                        android:src="@drawable/mm_submenu" />
                </RelativeLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/user_viewHeight"
                    android:layout_marginLeft="@dimen/user_viewMargin"
                    android:background="@mipmap/line" />

                <!-- 昵称 -->
                <RelativeLayout
                    android:id="@+id/nick_rl"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/user_itemHeight"
                    android:background="@null"
                    android:clickable="true"
                    android:gravity="center_vertical" >

                    <TextView
                        android:id="@+id/nick_Tv"
                        style="@style/text_black_18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:drawableLeft="@mipmap/ic_profile_nickname_normal"
                        android:drawablePadding="@dimen/user_signMargin"
                        android:duplicateParentState="true"
                        android:gravity="center_vertical"
                        android:text="@string/user_name" />

                    <TextView
                        android:id="@+id/nick_name"
                        style="@style/text_18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/user_wordMargin"
                        android:layout_toRightOf="@id/nick_Tv" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/user_arrowMargin"
                        android:scaleType="matrix"
                        android:src="@drawable/mm_submenu" />
                </RelativeLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/user_viewHeight"
                    android:layout_marginLeft="@dimen/user_viewMargin"
                    android:background="@mipmap/line" />

                <!-- 签名 -->
                <RelativeLayout
                    android:id="@+id/signature_rl"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/user_itemHeight"
                    android:background="@null"
                    android:clickable="true"
                    android:gravity="center_vertical" >

                    <TextView
                        android:id="@+id/sign_Tv"
                        style="@style/text_black_18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:drawableLeft="@mipmap/ic_profile_nickname_normal"
                        android:drawablePadding="@dimen/user_signMargin"
                        android:duplicateParentState="true"
                        android:gravity="center_vertical"
                        android:text="@string/user_sign" />

                    <TextView
                        android:id="@+id/signature"
                        style="@style/text_18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/user_wordMargin"
                        android:layout_toRightOf="@id/sign_Tv" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/user_arrowMargin"
                        android:scaleType="matrix"
                        android:src="@drawable/mm_submenu" />
                </RelativeLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/user_viewHeight"
                    android:layout_marginLeft="@dimen/user_viewMargin"
                    android:background="@mipmap/line" />

                <!-- 积分 -->
                <RelativeLayout
                    android:id="@+id/score_rl"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/user_itemHeight"
                    android:background="@null"
                    android:clickable="true"
                    android:gravity="center_vertical" >

                    <TextView
                        android:id="@+id/score_Tv"
                        style="@style/text_black_18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:drawableLeft="@mipmap/ic_profile_nickname_normal"
                        android:drawablePadding="@dimen/user_signMargin"
                        android:duplicateParentState="true"
                        android:gravity="center_vertical"
                        android:text="@string/user_name" />

                    <TextView
                        android:id="@+id/score"
                        style="@style/text_18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/user_wordMargin"
                        android:layout_toRightOf="@id/score_Tv" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/user_arrowMargin"
                        android:scaleType="matrix"
                        android:src="@drawable/mm_submenu" />
                </RelativeLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/user_viewHeight"
                    android:background="@mipmap/line" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/user_settingMargin"
                android:background="@null"
                android:orientation="vertical">
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/user_viewHeight"
                    android:background="@mipmap/line" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="42dip"
                    android:clickable="true"
                    android:gravity="center"
                    style="@style/layout_setting">

                    <Button
                        android:id="@+id/setting"
                        style="@style/text_black_18"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|center"
                        android:text="@string/user_setting" />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>